[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "put_in_pocket"
authors = [{ name = "Rhet Turnbull", email = "rturnbull+git@gmail.com" }]
license = { file = "LICENSE" }
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "click >= 8.1.3",
    "requests >= 2.28.2",
    "rich >= 13.3.4",
    "toml >= 0.10.2",
    "xdg >= 6.0.0",
]

[project.urls]
Home = "https://github.com/RhetTbull/put_in_pocket"

[project.scripts]
put_in_pocket = "put_in_pocket:main"
